--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -4,8 +4,8 @@ html {font-size: 100%;}
 body {background-color: white;}
 body {font-family:Arial, Helvetica, sans-serif;}
 /* Header */
-.header {
-    background-image: url( "../img/fondo-blanco.png");
+.encabezado {
+    background-image: url "/img/fondo-blanco.png";
     flex-flow: row;
     flex-wrap: wrap;  
     justify-content: flex-start;
@@ -13,7 +13,7 @@ body {font-family:Arial, Helvetica, sans-serif;}
     width: 100%;
     height: 150px;
 }
-.menu {display: flex;
+.menu-principal {display: flex;
     align-content: center;
     align-items: center;
     
@@ -47,11 +47,11 @@ header div h5 {padding: 5px;}
 margin:20px;
 }
 /* barra de navegacion */
-.sticky{
+.fijo{
     position: sticky;
     top: 0;
 }
-nav {
+.navegador {
     width: 100%;
     height: 40px;
     display: flex;
