--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -5,7 +5,7 @@ body {background-color: white;}
 body {font-family:Arial, Helvetica, sans-serif;}
 /* Header */
 .encabezado {
-    background-image: url"/img/fondo-blanco.png";
+    background-image: url(/img/fondo-blanco.png);
     flex-flow: row;
     flex-wrap: wrap;  
     justify-content: flex-start;
@@ -75,10 +75,10 @@ background: rgba(46, 46, 46, 0.192);
 /* termino hader y barra de navegacion  */
 /* imagen de descripcion */
 .contenedor-imagen {
-    margin-top: 60px;
+    margin-top: 10px;
     width: 100%;
     height: 500px;
-    background-image: url"/img/biografia.png";
+    background-image: url(/img/biografia.png);
     text-align: center;
     display:flex;
 flex-direction: row;
@@ -184,7 +184,7 @@ a{color: black;text-decoration: black;}
     align-content:center ;
     }
     .img-1 {
-        background-image: url"/img/img-1.png";
+        background-image: url(/img/img-1.png);
     grid-area: img ;}
 .img-2 { 
     background-image: url("../img/img-2.png");
