--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -5,7 +5,7 @@ body {background-color: white;}
 body {font-family:Arial, Helvetica, sans-serif;}
 /* Header */
 .encabezado {
-    background-image: url(/img/fondo-blanco.png);
+    background-image: url(./img/fondo-blanco.png);
     flex-flow: row;
     flex-wrap: wrap;  
     justify-content: flex-start;
