--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,77 +1,11 @@
-/* html */
+//html
 html {font-size: 100%;}
-/* Body */
-body {background-color: white;}
-body {font-family:Arial, Helvetica, sans-serif;}
-/* Header */
-.encabezado {
-    background-image: url("../img/fondo-blanco.png");
-    flex-flow: row;
-    flex-wrap: wrap;  
-    justify-content: flex-start;
-    display: flex;
-    width: 100%;
-    height: 150px;
-}
-.menu-principal {display: flex;
-    align-content: center;
-    align-items: center;
-    
-}
+// Body
+body {background-color: white;
+ font-family:Arial, Helvetica, sans-serif;
+}  
 header div h5 {padding: 5px;}
-.contactanos {
-    height: 35px;
-    border: solid 1px grey;
-    background:red;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    color: white;
-    text-decoration: none;
-    transform: translate(500px,0px);}
-    .info {
-        height: 35px;
-        display: flex;
-        align-content: center;
-        align-items: center;
-        color: grey;
-        text-decoration: none;
-        transform: translate(500px,0px);}
 
-    
-
-.headerLogoImg {
-    width: 76px;
-    height: 50px;
-    color: black;
-margin:20px;
-}
-/* barra de navegacion */
-.fijo{
-    position: sticky;
-    top: 0;
-}
-.navegador {
-    width: 100%;
-    height: 40px;
-    display: flex;
-   justify-content:start;
-align-items: center;
-align-content: center;
-}
-.nav-enlace {
-    text-decoration: none;
-    color: grey;
-    border: solid 1px gray;
-padding: 10px 60px 10px 60px;}
-
-.nav-vacio {
-    color:white;
-    border: solid 1px gray;
-padding: 10px 141px 10px 130px;}
-.nav-enlace:hover{
-background: rgba(46, 46, 46, 0.192);
-}
 /* termino hader y barra de navegacion  */
 /* imagen de descripcion */
 .contenedor-imagen {
