--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,48 @@
-header {
-    background-color: red;
-&menu {background-color: blue;}
-&imagen{background-color: brown;}
-&logo{background-color: coral;}
-&icono{background-color: cornflowerblue;}
+header {background-color: red;
+color: beige;
+&-menu {background-color: blue;}
+&-imagen{background-color: brown;}
+&-logo{background-color: coral;}
+&-icono{background-color: cornflowerblue;}
 }
+
+// Header
+.encabezado {
+    background-image: url("../img/fondo-blanco.png");
+    flex-flow: row;
+    flex-wrap: wrap;  
+    justify-content: flex-start;
+    display: flex;
+    width: 100%;
+    height: 150px;
+&-principal {
+    display: flex;
+    align-content: center;
+    align-items: center;}
+&-Logo-Img {
+        width: 76px;
+        height: 50px;
+        color: black;
+    margin:20px;}
+&-fijo {
+    position: sticky;
+        top: 0;}
+        &-contactanos {
+            height: 35px;
+            border: solid 1px grey;
+            background:red;
+            display: flex;
+            align-content: center;
+            align-items: center;
+            color: white;
+            text-decoration: none;
+            transform: translate(500px,0px);}
+            &-info {
+                height: 35px;
+                display: flex;
+                align-content: center;
+                align-items: center;
+                color: grey;
+                text-decoration: none;
+                transform: translate(500px,0px);}
+            }
