link a styles.css

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -5,9 +5,7 @@ body {background-color: white;
  font-family:Arial, Helvetica, sans-serif;
 }  
 header div h5 {padding: 5px;}
-
-/* termino hader y barra de navegacion  */
-/* imagen de descripcion */
+//imagen de descripcion 
 .contenedor-imagen {
     margin-top: 10px;
     width: auto;
