--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -116,25 +116,25 @@ a{color: black;text-decoration: black;}
     align-content:center ;
     }
     .img-1 {
-        background-image: url(./img/img-1.png);
+        background-image: url(../img/img-1.png);
     grid-area: img ;}
 .img-2 { 
-    background-image: url(./img/img-2.png);
+    background-image: url(../img/img-2.png);
 grid-area: img-2 ;}
 .img-3 {
-    background-image: url(./img/img-3.png);
+    background-image: url(../img/img-3.png);
 grid-area: img-3 ;}
 .img-4 {
-    background-image:url(./img/img-4.png);
+    background-image:url(../img/img-4.png);
 grid-area: img-4 ;}
 .img-5 {
-    background-image: url(./img/img-5.png);
+    background-image: url(../img/img-5.png);
 grid-area: img-5 ;}
 .img-6 {
-    background-image: url(./img/img-6.png);
+    background-image: url(../img/img-6.png);
 grid-area: img-6 ;}
 .img-7 {
-    background-image: url(./img/img-7.png);
+    background-image: url(../img/img-7.png);
 grid-area: img-7 ;}
 .collage-imagen {
     background-color: green;}
