--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,9 @@ header div h5 {
   padding: 5px; }
 
 .contenedor-imagen {
-  margin-top: 10px;
-  width: auto;
+  background-repeat: no-repeat;
+  margin-top: 5px;
+  width: 100%;
   height: 500px;
   background-image: url("../img/biografia.png");
   text-align: center;
@@ -153,10 +154,10 @@ a {
   background-image: url("../img/fondo-blanco.png");
   flex-flow: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   display: flex;
   width: 100%;
-  height: 150px; }
+  height: 140px; }
   .encabezado-principal {
     display: flex;
     align-content: center;
@@ -169,29 +170,18 @@ a {
   .encabezado-fijo {
     position: sticky;
     top: 0; }
-  .encabezado-contactanos {
-    height: 35px;
-    border: solid 1px grey;
-    background: red;
+  .encabezado-eslogan {
     display: flex;
     align-content: center;
     align-items: center;
-    color: white;
-    text-decoration: none;
-    transform: translate(500px, 0px); }
-  .encabezado-info {
-    height: 35px;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    color: grey;
-    text-decoration: none;
-    transform: translate(500px, 0px); }
+    color: black;
+    text-decoration: none; }
 
 .navegador {
-  width: 100%;
+  flex-basis: 100%;
   height: 40px;
   display: flex;
+  flex-direction: row;
   justify-content: start;
   align-items: center;
   align-content: center; }
@@ -200,10 +190,21 @@ a {
     color: grey;
     border: solid 1px gray;
     padding: 10px 60px 10px 60px; }
-  .navegador-vacio {
-    color: white;
+  .navegador-contacto {
+    text-decoration: none;
+    color: grey;
     border: solid 1px gray;
-    padding: 10px 141px 10px 130px; }
+    padding: 10px 60px 10px 60px; }
 
-.nav-enlace:hover {
+.navegador-enlace:hover {
   background: rgba(46, 46, 46, 0.192); }
+
+.navegador-contacto:hover {
+  color: white;
+  background: rgba(255, 0, 0, 0.9); }
+
+@media screen and (max-width: 959px) {
+  .navegador {
+    flex-direction: column; }
+  .contenedor-imagen {
+    height: 400px; } }
