--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -7,8 +7,9 @@ body {background-color: white;
 header div h5 {padding: 5px;}
 //imagen de descripcion 
 .contenedor-imagen {
-    margin-top: 10px;
-    width: auto;
+    background-repeat: no-repeat;
+    margin-top: 5px;
+    width: 100%;
     height: 500px;
     background-image: url("../img/biografia.png");
     text-align: center;
