--- a/scss/_navegador.scss
+++ b/scss/_navegador.scss
@@ -1,7 +1,8 @@
 .navegador {
-    width: 100%;
+    flex-basis: 100%;
     height: 40px;
     display: flex;
+    flex-direction: row;
    justify-content:start;
 align-items: center;
 align-content: center;
@@ -10,12 +11,17 @@ align-content: center;
     color: grey;
     border: solid 1px gray;
 padding: 10px 60px 10px 60px;}
-&-vacio {
-    color:white;
+&-contacto {
+    text-decoration: none;
+    color: grey;
     border: solid 1px gray;
-padding: 10px 141px 10px 130px;}
+padding: 10px 60px 10px 60px;}
 }
 
-.nav-enlace:hover{
+.navegador-enlace:hover{
 background: rgba(46, 46, 46, 0.192);
 }
+.navegador-contacto:hover{
+    color: white;
+    background:rgba(255, 0, 0, 0.900);
+    }
