--- a/css/styles.css
+++ b/css/styles.css
@@ -14,12 +14,47 @@ header div h5 {
   width: 100%;
   height: 500px;
   background-image: url("../img/biografia.png");
-  text-align: center;
+  background-size: contain;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: end;
-  align-content: center; }
+  align-items: end; }
+
+.contenedor-mvs {
+  font-size: 20px;
+  color: white;
+  background-color: #292929;
+  align-content: center;
+  justify-content: space-around;
+  flex-flow: row;
+  flex-wrap: wrap;
+  display: flex;
+  width: 100%;
+  height: 50px; }
+  .contenedor-mvs-d {
+    color: white;
+    background-color: #292929;
+    align-content: center;
+    justify-content: space-around;
+    flex-flow: row;
+    flex-wrap: wrap;
+    display: flex;
+    width: 100%;
+    height: 100px; }
+
+.mvs {
+  text-align: center;
+  align-content: center;
+  width: 220px;
+  height: 30px;
+  font-size: 20px; }
+
+.mvs-d {
+  text-align: center;
+  align-content: center;
+  width: 220px;
+  height: 60px;
+  font-size: 12px; }
 
 .descripcion-imagen {
   background-color: rgba(0, 0, 0, 0.5);
@@ -28,9 +63,11 @@ header div h5 {
   border: solid 1.5px white;
   color: white;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  margin: 10px 10px 100px 10px; }
+  margin-bottom: 100px;
+  margin-left: 20px;
+  margin-right: 20px; }
 
 .descripcion-imagen:hover {
   background: red; }
@@ -45,19 +82,20 @@ header div h5 {
 .biografia {
   display: flex;
   justify-content: center;
-  background-image: url(./img/logo.jpg);
+  background-image: url("../img/biografia.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 100%;
-  width: 50%;
+  height: 50%;
+  width: 80%;
   overflow: auto;
   color: black;
   /* margenes */
   margin: 10px;
   padding: 20px;
   /* bordes */
-  border: solid 5px black; }
+  border: solid 5px black;
+  border-radius: 20px; }
 
 .biografiaDescripcion {
   font-weight: 100;
@@ -149,6 +187,30 @@ a {
 
 .collage-imagen {
   background-color: green; }
+
+.pie-pagina {
+  display: flex;
+  background-color: red;
+  width: 100%;
+  height: 250px; }
+
+.contenedor-contacto {
+  justify-content: center;
+  flex-flow: row;
+  display: flex;
+  width: 100%;
+  height: 1000px;
+  background-color: white; }
+
+.contenedor-contacto-int {
+  justify-content: center;
+  flex-flow: row;
+  display: flex;
+  width: 60%;
+  height: 900px;
+  background-color: white;
+  border-radius: 20px;
+  border: solid 1.5px black; }
 
 .encabezado {
   background-image: url("../img/fondo-blanco.png");
