--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ header div h5 {
     height: 100px; }
 
 .mvs {
+  background-color: brown;
   text-align: center;
   align-content: center;
   width: 220px;
@@ -50,6 +51,7 @@ header div h5 {
   font-size: 20px; }
 
 .mvs-d {
+  background-color: brown;
   text-align: center;
   align-content: center;
   width: 220px;
@@ -73,8 +75,7 @@ header div h5 {
   background: red; }
 
 /* Quien Somos */
-.quienSomos {
-  color: blue;
+.nuestros-servicios {
   justify-content: center;
   display: flex; }
 
@@ -97,11 +98,33 @@ header div h5 {
   border: solid 5px black;
   border-radius: 20px; }
 
-.biografiaDescripcion {
-  font-weight: 100;
-  font-size: 1.25rem;
-  text-align: center;
-  line-height: 1.5; }
+.contenedor-servicios {
+  flex-direction: row;
+  display: flex;
+  flex-flow: wrap;
+  width: 100%;
+  height: 445px;
+  background-color: white;
+  justify-content: space-around;
+  align-content: center; }
+  .contenedor-servicios-int {
+    align-content: center;
+    justify-content: center;
+    display: flex;
+    flex-flow: wrap;
+    width: 200px;
+    height: 370px;
+    background-color: blue;
+    border-radius: 10px; }
+
+.contenedor-servicios-int p {
+  justify-content: center;
+  width: 200px;
+  color: white;
+  background-color: grey; }
+
+.contenedor-servicios-int:hover {
+  background-color: rgba(128, 128, 128, 0.75); }
 
 /* cambiar color por etiqueta */
 h6 {
@@ -201,16 +224,15 @@ a {
   width: 100%;
   height: 1000px;
   background-color: white; }
-
-.contenedor-contacto-int {
-  justify-content: center;
-  flex-flow: row;
-  display: flex;
-  width: 60%;
-  height: 900px;
-  background-color: white;
-  border-radius: 20px;
-  border: solid 1.5px black; }
+  .contenedor-contacto-int {
+    justify-content: center;
+    flex-flow: row;
+    display: grid;
+    width: 60%;
+    height: 900px;
+    background-color: white;
+    border-radius: 20px;
+    border: solid 1.5px black; }
 
 .encabezado {
   background-image: url("../img/fondo-blanco.png");
