--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,16 @@ a {
   width: 100%;
   height: 250px; }
 
+.nav-boos-link, .nav-boos-link-contacto {
+  border: solid grey 1px;
+  background-color: white; }
+
+.nav-boos-link :hover {
+  background-color: rgba(128, 128, 128, 0.75); }
+
+.nav-boos-link-contacto :hover {
+  background-color: red; }
+
 .contenedor-contacto {
   justify-content: center;
   flex-flow: row;
