--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -198,3 +198,17 @@ background-color: red;
 width: 100%;
 height: 250px;
 }
+
+
+
+
+
+
+
+// navegador boostrap
+.nav-boos-link , .nav-boos-link-contacto {
+    border: solid grey 1px;
+    background-color: white;}
+ .nav-boos-link :hover {
+        background-color:rgba(128, 128, 128, 0.750);}
+        .nav-boos-link-contacto :hover{ background-color: red;}
