--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ header div h5 {
   margin-top: 5px;
   width: 100%;
   height: 500px;
-  background-image: url("../img/biografia.png");
+  background-image: url("../img/descripcion.jpg");
   background-size: contain;
   align-items: end; }
 
@@ -217,6 +217,29 @@ a {
 
 .nav-boos-link-contacto :hover {
   background-color: red; }
+
+.bxr {
+  padding: 1rem;
+  background-color: blue;
+  border: 2px solid gray;
+  color: white;
+  text-align: center; }
+
+.axr {
+  width: 100%;
+  height: 300px;
+  background-color: gray; }
+
+.contenedor-imagens {
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-image: url("../img/descripcion.jpg");
+  background-size: cover;
+  background-color: red;
+  margin-top: 5px;
+  width: 100%;
+  height: 500px;
+  border: black solid 2px; }
 
 .contenedor-contacto {
   justify-content: center;
