--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -18,7 +18,7 @@ header div h5 {padding: 5px;}
     margin-top: 5px;
     width: 100%;
     height: 500px;
-    background-image: url("../img/biografia.png");
+    background-image: url("../img/descripcion.jpg");
     background-size: contain;
 align-items: end;
 
@@ -212,3 +212,28 @@ height: 250px;
  .nav-boos-link :hover {
         background-color:rgba(128, 128, 128, 0.750);}
         .nav-boos-link-contacto :hover{ background-color: red;}
+
+//pruebas de boostrap funcionales
+        .bxr {
+            padding: 1rem;
+            background-color: blue;
+            border: 2px solid gray;
+color: white;
+text-align: center;
+        }
+
+        .axr {
+            width: 100%;
+            height: 300px;
+            background-color: gray;}
+            .contenedor-imagens {
+                background-size: auto;
+                background-repeat:no-repeat;
+                background-image: url("../img/descripcion.jpg");
+                background-size: cover;
+                background-color: red;
+                margin-top: 5px;
+                width: 100%;
+                height: 500px;
+                border: black solid 2px;
+            }
