--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -216,24 +216,17 @@ height: 250px;
 //pruebas de boostrap funcionales
         .bxr {
             padding: 1rem;
-            background-color: blue;
-            border: 2px solid gray;
+            background-color: brown;
+            border: 2px solid rgb(41, 41, 41);
 color: white;
 text-align: center;
         }
 
         .axr {
             width: 100%;
-            height: 300px;
-            background-color: gray;}
+            height: 250px;
+            background-color: rgb(41, 41, 41);}
             .contenedor-imagens {
-                background-size: auto;
-                background-repeat:no-repeat;
-                background-image: url("../img/descripcion.jpg");
-                background-size: cover;
-                background-color: red;
-                margin-top: 5px;
-                width: 100%;
-                height: 500px;
-                border: black solid 2px;
+              background-color: rgb(41, 41, 41);
+                
             }
